python/testData/quickFixes/PyRemoveArgumentQuickFixTest/duplicate.py
def foo(a, p):
    pass


foo(1, p=2, <error descr="Duplicate argument">p=3<caret>3</error>)
